# store

./: db.sqlite3  docker-compose.yml  pyproject.toml
cart/: cart.py  forms.py  views.py
online_store/: settings.py  urls.py
orders/: admin.py  models.py  views.py
orders/migrations/: 0001_initial.py
shop/: admin.py  models.py  views.py
shop/migrations/: 0001_initial.py  0002_alter_product_name.py  0003_alter_category_name.py  0004_alter_category_options_alter_product_description.py  0005_alter_category_options_alter_category_name_and_more.py
shop/templates/shop/: base.html
static/css/: base.css
staticfiles/css/: base.css
templates/: base.html
templates/cart/: detail.html
templates/django_registration/: registration_complete.html
templates/orders/: create.html
templates/shop/: detail.html  list.html
